Working injections, db, docker, liquibase, etc.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 
 jar {
-	baseName = 'spac.fusion'
+	baseName = 'spac-fusion'
 	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
