--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'spring-boot'
+apply plugin: 'docker'
 
 buildscript {
     ext {
@@ -11,6 +12,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("se.transmode.gradle:gradle-docker:1.2")
     }
 }
 
@@ -79,7 +81,8 @@ task integrationTest(type: Test) {
 }
 
 //Ensure that the check task fails the build if there are failing integration tests.
-check.dependsOn integrationTest
+//check.dependsOn integrationTest
+
 //Ensure that our unit tests are run before our integration tests
 integrationTest.mustRunAfter test
 
@@ -87,3 +90,17 @@ integrationTest.mustRunAfter test
 tasks.withType(Test) {
     reports.html.destination = file("${reporting.baseDir}/${name}")
 }
+
+task buildDocker(type: Docker) {
+    baseImage = 'develar/java:latest'
+    push = project.hasProperty('push')
+    tag = "awzurn/spac-fusion-api"
+    addFile {
+        from jar
+        rename {'app.jar'}
+    }
+    entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+    exposePort(8080)
+}
+
+buildDocker.dependsOn(build)
