--- a/database/liquibase/master.yml
+++ b/database/liquibase/master.yml
@@ -2,3 +2,5 @@ databaseChangeLog:
   - preConditions: []
   - include:
       file: "liquibase/changelog/000_initial_schema.yml"
+  - include:
+      file: "liquibase/changelog/001_insert_test_user.yml"
