--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PWD}
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jackson.serialization.write-dates-as-timestamps=false
