Updates ProgramLevel to be String on FusionUser rather than Integer

--- a/database/liquibase/changelog/001_insert_test_user.yml
+++ b/database/liquibase/changelog/001_insert_test_user.yml
@@ -36,4 +36,4 @@ databaseChangeLog:
                 value: 211.52
             - column:
                 name: program_level
-                value: 1
+                value: Gold
