--- a/.gitignore
+++ b/.gitignore
@@ -5,48 +5,50 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea
+
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/
+backend/.idea/workspace.xml
+backend/.idea/tasks.xml
+backend/.idea/dictionaries
+backend/.idea/vcs.xml
+backend/.idea/jsLibraryMappings.xml
+backend/.idea/
 
 # Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+backend/.idea/dataSources.ids
+backend/.idea/dataSources.xml
+backend/.idea/dataSources.local.xml
+backend/.idea/sqlDataSources.xml
+backend/.idea/dynamic.xml
+backend/.idea/uiDesigner.xml
 
 # Gradle:
-.idea/gradle.xml
-.idea/libraries
+backend/.idea/gradle.xml
+backend/.idea/libraries
 
 # Mongo Explorer plugin:
-.idea/mongoSettings.xml
+backend/.idea/mongoSettings.xml
 
 ## File-based project format:
-*.iws
+backend/*.iws
 
 ## Plugin-specific files:
 
 # IntelliJ
-/out/
+backend/out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+backend/.idea_modules/
 
 # JIRA plugin
-atlassian-ide-plugin.xml
+backend/atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+backend/com_crashlytics_export_strings.xml
+backend/crashlytics.properties
+backend/crashlytics-build.properties
+backend/fabric.properties
 
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
@@ -56,32 +58,43 @@ fabric.properties
 
 
 ### Java ###
-*.class
+backend/*.class
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+backend/.mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.ear
+backend/*.jar
+backend/*.war
+backend/*.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+backend/hs_err_pid*
 
 
 ### Gradle ###
 .gradle
 build/
+backend/build/
 
 # Ignore Gradle GUI config
-gradle-app.setting
+backend/gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+backend/!gradle-wrapper.jar
 
 # Cache of project
-.gradletasknamecache
+backend/.gradletasknamecache
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+### FRONTEND ###
+frontend/node_modules/
+frontend/dist/
+frontend/static/dist/
+frontend/*.iml
+frontend/webpack-assets.json
+frontend/webpack-stats.json
+frontend/npm-debug.log
+frontend/node-v6.6.0-darwin-x64/
