--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+spac.auth0.jwt=${SPAC_AUTH0_JWT)
+spac.login.username=${SPAC_LOGIN_USERNAME}
+spac.login.passwor=${SPAC_LOGIN_PASSWORD}
