--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PWD}
+spring.datasource.url=jdbc:postgresql://localhost:15432/spac_fusion
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+spac.auth0.jwt=${SPAC_AUTH0_JWT)
+spac.login.username=admin
+spac.login.password=password
